Actualizar habilidades en index.html: reemplazar tecnologías de JavaScript, React y Node.js por Js/Ts, Vue, Laravel y AWS.

--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
                 <ul class="skills">
                     <li>HTML</li>
                     <li>CSS</li>
-                    <li>JavaScript</li>
-                    <li>React</li>
-                    <li>Node.js</li>
-                    <li>UI/UX</li>
+                    <li>Js/Ts</li>
+                    <li>Vue</li>
+                    <li>Laravel</li>
+                    <li>AWS</li>
                 </ul>
             </div>
         </section>
