Actualizar index.html: personalizar contenido de la sección "hero", agregar detalles sobre educación y experiencia profesional, y mejorar la sección de habilidades.

--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
         <section id="hero" class="hero">
             <div class="container grid-2">
                 <div class="hero-text">
-                    <h1>Hola, soy Lorem Ipsum</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris. Curabitur vehicula, lorem vitae tincidunt ultrices, ipsum lectus faucibus lectus, id placerat nisl nibh id ipsum.</p>
+                    <h1>Hola, soy Alberto de Pablo López</h1>
+                    <p>Apasionado profesional con experiencia en atención al cliente y gestión de proyectos. Mi adaptabilidad, capacidad para trabajar en equipo y habilidades interpersonales me permiten abordar desafíos de manera eficiente. Aspiro a integrarme en un entorno colaborativo donde pueda aportar una visión práctica, enfocada en resultados y con un enfoque metódico en cada proyecto.</p>
                     <div class="cta-group">
                         <a href="#projects" class="btn btn-primary">Ver proyectos</a>
                         <a href="#contact" class="btn btn-ghost">Contactar</a>
                     </div>
                 </div>
                 <div class="hero-media">
-                    <div class="avatar" aria-hidden="true">LI</div>
+                    <div class="avatar" aria-hidden="true">AP</div>
                 </div>
             </div>
         </section>
@@ -49,7 +49,30 @@
         <section id="about" class="section">
             <div class="container">
                 <h2 class="section-title">Sobre mí</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ultricies, velit nec cursus tempor, lorem mi luctus orci, in dictum quam risus at mi. Morbi vel cursus lorem, sed convallis lorem. Integer id neque in ex imperdiet viverra. Etiam sed dignissim magna. Suspendisse vitae fringilla justo, non maximus risus.</p>
+                <p>
+                    Profesional con formación en desarrollo web y dietética, capacitado para diseñar, desarrollar y mantener aplicaciones web dinámicas, asegurando funcionalidad, usabilidad y seguridad. Dominio de lenguajes de programación, bases de datos y tecnologías web. Formación integral en nutrición y dietética, con capacidad para diseñar, gestionar y supervisar planes alimentarios personalizados, promoviendo hábitos saludables y adaptados a las necesidades específicas.
+                </p>
+                <ul class="skills">
+                    <li>Comunicación efectiva</li>
+                    <li>Pensamiento crítico</li>
+                    <li>Creatividad</li>
+                    <li>Orientación a resultados</li>
+                    <li>Resolución de problemas</li>
+                    <li>Rápida capacidad de aprendizaje</li>
+                    <li>Trabajo en equipo</li>
+                    <li>Adaptabilidad</li>
+                    <li>Autogestión</li>
+                    <li>Resiliencia</li>
+                </ul>
+                <h3>Skills adicionales</h3>
+                <ul class="skills">
+                    <li>GFPS DAW Dual- IES Pio Baroja 2023 - 2025</li>
+                    <li>GFPS Dietética - Escuela Profesional Javeriana 2023</li>
+                    <li>Capacitado para diseñar, desarrollar y mantener aplicaciones web dinámicas</li>
+                    <li>Dominio de lenguajes de programación, bases de datos y tecnologías web</li>
+                    <li>Formación integral en nutrición y dietética</li>
+                    <li>Conocimientos en evaluación nutricional, elaboración de dietas, control de la calidad alimentaria y educación nutricional</li>
+                </ul>
             </div>
         </section>
 
@@ -60,25 +83,25 @@
                     <article class="card">
                         <div class="card-media" aria-hidden="true"></div>
                         <div class="card-body">
-                            <h3>Proyecto Uno</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sed ligula at sapien efficitur scelerisque.</p>
-                            <a href="#" class="card-link">Ver más</a>
+                            <h3>Becario desarrollo web - JHK T-Shirt SL</h3>
+                            <p>Septiembre 2024 a Enero 2025<br>
+                            Desarrollo y mantenimiento de aplicaciones web utilizando tecnologías Laravel y Vue.js, implementación eficiente de funcionalidades en frontend y backend, gestión de datos provenientes de bases de datos para generación de PDFs dinámicos, y optimización de consultas para asegurar la calidad y el rendimiento del proyecto.</p>
                         </div>
                     </article>
                     <article class="card">
                         <div class="card-media" aria-hidden="true"></div>
                         <div class="card-body">
-                            <h3>Proyecto Dos</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sed ligula at sapien efficitur scelerisque.</p>
-                            <a href="#" class="card-link">Ver más</a>
+                            <h3>Peón en taller de serigrafía - Total Shirt SL</h3>
+                            <p>Junio 2024 a Agosto 2024<br>
+                            Carga y descarga de materiales y camisetas, organización eficiente del stock en estanterías, y control de producción para asegurar que las camisetas serigrafiadas cumplan con los estándares de calidad.</p>
                         </div>
                     </article>
                     <article class="card">
                         <div class="card-media" aria-hidden="true"></div>
                         <div class="card-body">
-                            <h3>Proyecto Tres</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sed ligula at sapien efficitur scelerisque.</p>
-                            <a href="#" class="card-link">Ver más</a>
+                            <h3>Camarero - New Line | Promotion & Events</h3>
+                            <p>Septiembre 2023 a Mayo 2024<br>
+                            Atención al cliente, rápido servicio para un flujo de clientela eficaz y gestión del cobro.</p>
                         </div>
                     </article>
                 </div>
@@ -87,7 +110,7 @@
 
         <section id="skills" class="section">
             <div class="container">
-                <h2 class="section-title">Habilidades</h2>
+                <h2 class="section-title">Habilidades Técnicas</h2>
                 <ul class="skills">
                     <li>HTML</li>
                     <li>CSS</li>
@@ -99,9 +122,35 @@
             </div>
         </section>
 
+        <section id="education" class="section section-alt">
+            <div class="container">
+                <h2 class="section-title">Educación</h2>
+                <ul>
+                    <li><strong>GFPS DAW Dual</strong> - IES Pio Baroja (2023 - 2025)</li>
+                    <li><strong>GFPS Dietética</strong> - Escuela Profesional Javeriana (2023)</li>
+                </ul>
+            </div>
+        </section>
+
+        <section id="experience" class="section">
+            <div class="container">
+                <h2 class="section-title">Experiencia profesional</h2>
+                <ul>
+                    <li><strong>Becario desarrollo web</strong> - JHK T-Shirt SL (Septiembre 2024 a Enero 2025)</li>
+                    <li><strong>Peón en taller de serigrafía</strong> - Total Shirt SL (Junio 2024 a Agosto 2024)</li>
+                    <li><strong>Camarero</strong> - New Line | Promotion & Events (Septiembre 2023 a Mayo 2024)</li>
+                    <li><strong>Asistente de ventas online</strong> - El Corte Inglés (Noviembre 2022 a Diciembre 2022)</li>
+                </ul>
+            </div>
+        </section>
+
         <section id="contact" class="section section-alt">
             <div class="container">
                 <h2 class="section-title">Contacto</h2>
+                <p>
+                    Getafe, España · 684108419 · <a href="mailto:albertodepablolopez@gmail.com">albertodepablolopez@gmail.com</a><br>
+                    <a href="https://www.linkedin.com/in/albertodpablo" target="_blank">www.linkedin.com/in/albertodpablo</a>
+                </p>
                 <form id="contactForm" class="contact-form" novalidate>
                     <div class="form-row">
                         <label for="name">Nombre</label>
