Actualizar index.html: renombrar sección de proyectos a "experiencia", agregar detalles de experiencia laboral y actualizar contenido de proyectos con descripciones breves.

--- a/index.html
+++ b/index.html
@@ -76,32 +76,60 @@
             </div>
         </section>
 
-        <section id="projects" class="section section-alt">
+        <!-- Cambia el nombre de la sección y tarjetas horizontales -->
+        <section id="experience-cards" class="section section-alt">
+            <div class="container">
+                <h2 class="section-title">Experiencia</h2>
+                <div class="cards-horizontal">
+                    <article class="card-horizontal">
+                        <div class="card-body-horizontal">
+                            <h3>Becario desarrollo web - JHK T-Shirt SL</h3>
+                            <p>Septiembre 2024 a Enero 2025<br>
+                            Desarrollo y mantenimiento de aplicaciones web utilizando tecnologías Laravel y Vue.js, implementación eficiente de funcionalidades en frontend y backend, gestión de datos provenientes de bases de datos para generación de PDFs dinámicos, y optimización de consultas para asegurar la calidad y el rendimiento del proyecto.</p>
+                        </div>
+                    </article>
+                    <article class="card-horizontal">
+                        <div class="card-body-horizontal">
+                            <h3>Peón en taller de serigrafía - Total Shirt SL</h3>
+                            <p>Junio 2024 a Agosto 2024<br>
+                            Carga y descarga de materiales y camisetas, organización eficiente del stock en estanterías, y control de producción para asegurar que las camisetas serigrafiadas cumplan con los estándares de calidad.</p>
+                        </div>
+                    </article>
+                    <article class="card-horizontal">
+                        <div class="card-body-horizontal">
+                            <h3>Camarero - New Line | Promotion & Events</h3>
+                            <p>Septiembre 2023 a Mayo 2024<br>
+                            Atención al cliente, rápido servicio para un flujo de clientela eficaz y gestión del cobro.</p>
+                        </div>
+                    </article>
+                </div>
+            </div>
+        </section>
+
+        <!-- Nueva sección de proyectos -->
+        <section id="projects" class="section">
             <div class="container">
                 <h2 class="section-title">Proyectos</h2>
                 <div class="grid-3 cards">
                     <article class="card">
                         <div class="card-media" aria-hidden="true"></div>
                         <div class="card-body">
-                            <h3>Becario desarrollo web - JHK T-Shirt SL</h3>
-                            <p>Septiembre 2024 a Enero 2025<br>
-                            Desarrollo y mantenimiento de aplicaciones web utilizando tecnologías Laravel y Vue.js, implementación eficiente de funcionalidades en frontend y backend, gestión de datos provenientes de bases de datos para generación de PDFs dinámicos, y optimización de consultas para asegurar la calidad y el rendimiento del proyecto.</p>
+                            <h3>Proyecto 1</h3>
+                            <p>Descripción breve del proyecto 1.</p>
                         </div>
                     </article>
                     <article class="card">
                         <div class="card-media" aria-hidden="true"></div>
                         <div class="card-body">
-                            <h3>Peón en taller de serigrafía - Total Shirt SL</h3>
-                            <p>Junio 2024 a Agosto 2024<br>
-                            Carga y descarga de materiales y camisetas, organización eficiente del stock en estanterías, y control de producción para asegurar que las camisetas serigrafiadas cumplan con los estándares de calidad.</p>
+                            <h3>Proyecto 2</h3>
+                            <p>Descripción breve del proyecto 2.</p>
                         </div>
                     </article>
                     <article class="card">
                         <div class="card-media" aria-hidden="true"></div>
                         <div class="card-body">
-                            <h3>Camarero - New Line | Promotion & Events</h3>
-                            <p>Septiembre 2023 a Mayo 2024<br>
-                            Atención al cliente, rápido servicio para un flujo de clientela eficaz y gestión del cobro.</p>
+                            <h3>Proyecto 3</h3>
+                            <p>Descripción breve del proyecto 3.</p>
                         </div>
                     </article>
                 </div>
