--- a/index.html
+++ b/index.html
@@ -108,31 +108,10 @@
 
         <!-- Nueva sección de proyectos -->
         <section id="projects" class="section">
-            <div class="container">
+            <div class="container" style="text-align:center;">
                 <h2 class="section-title">Proyectos</h2>
-                <div class="grid-3 cards">
-                    <article class="card">
-                        <div class="card-media" aria-hidden="true"></div>
-                        <div class="card-body">
-                            <h3>Proyecto 1</h3>
-                            <p>Descripción breve del proyecto 1.</p>
-                        </div>
-                    </article>
-                    <article class="card">
-                        <div class="card-media" aria-hidden="true"></div>
-                        <div class="card-body">
-                            <h3>Proyecto 2</h3>
-                            <p>Descripción breve del proyecto 2.</p>
-                        </div>
-                    </article>
-                    <article class="card">
-                        <div class="card-media" aria-hidden="true"></div>
-                        <div class="card-body">
-                            <h3>Proyecto 3</h3>
-                            <p>Descripción breve del proyecto 3.</p>
-                        </div>
-                    </article>
-                </div>
+                <div style="font-size:5rem; margin-bottom:1rem;" aria-hidden="true">🚧</div>
+                <p style="font-size:1.2rem;">Estamos trabajando en ello</p>
             </div>
         </section>
 
