Actualizar título del portafolio y agregar sección de educación en index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio | Lorem Ipsum</title>
+    <title>Portfolio Alberto de Pablo</title>
     <meta name="description" content="Portfolio personal con proyectos, habilidades y contacto.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -43,6 +43,16 @@
                 <div class="hero-media">
                     <div class="avatar" aria-hidden="true">AP</div>
                 </div>
+            </div>
+        </section>
+
+                <section id="education" class="section section-alt">
+            <div class="container">
+                <h2 class="section-title">Educación</h2>
+                <ul>
+                    <li><strong>GFPS DAW Dual</strong> - IES Pio Baroja (2023 - 2025)</li>
+                    <li><strong>GFPS Dietética</strong> - Escuela Profesional Javeriana (2023)</li>
+                </ul>
             </div>
         </section>
 
@@ -129,15 +139,7 @@
             </div>
         </section>
 
-        <section id="education" class="section section-alt">
-            <div class="container">
-                <h2 class="section-title">Educación</h2>
-                <ul>
-                    <li><strong>GFPS DAW Dual</strong> - IES Pio Baroja (2023 - 2025)</li>
-                    <li><strong>GFPS Dietética</strong> - Escuela Profesional Javeriana (2023)</li>
-                </ul>
-            </div>
-        </section>
+
 
         <section id="experience" class="section">
             <div class="container">
