Comentar enlace de logo en el encabezado de index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header class="site-header">
         <div class="container">
-            <a href="#" class="logo">Lorem<span>Ipsum</span></a>
+            <!-- <a href="#" class="logo">Lorem<span>Ipsum</span></a> -->
             <nav class="site-nav" id="siteNav" aria-label="Principal">
                 <button class="nav-toggle" id="navToggle" aria-expanded="false" aria-controls="primaryMenu" aria-label="Abrir menú">
                     <span></span><span></span><span></span>
