--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Portfolio | Lorem Ipsum</title>
+        <title>Portfolio - Resume | Alberto de Pablo</title>
         <meta
             name="description"
             content="Portfolio personal con proyectos, habilidades y contacto."
